{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 202,
  "lineage": "35aacfb2-d93a-3a5e-1f54-7a3ff14e24ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:subnet/subnet-0e731be72849fcae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e731be72849fcae0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013873214808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "db-subnet-1"
            },
            "tags_all": {
              "Name": "db-subnet-1"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "subnet-0e731be72849fcae0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:subnet/subnet-0b4c35c1586248cdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4c35c1586248cdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013873214808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "db-subnet-2"
            },
            "tags_all": {
              "Name": "db-subnet-2"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "subnet-0b4c35c1586248cdc",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "fgd3_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:loadbalancer/app/fgd3-alb/9797da222ad79b0a",
            "arn_suffix": "app/fgd3-alb/9797da222ad79b0a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fgd3-alb-1575930864.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:loadbalancer/app/fgd3-alb/9797da222ad79b0a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fgd3-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0c64eecdd4715dab4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c397cb47cc20d9b"
              },
              {
                "subnet_id": "subnet-09974311a8a707538"
              }
            ],
            "subnets": [
              "subnet-02c397cb47cc20d9b",
              "subnet-09974311a8a707538"
            ],
            "tags": {
              "Name": "fgd3-alb"
            },
            "tags_all": {
              "Name": "fgd3-alb"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:loadbalancer/app/fgd3-alb/9797da222ad79b0a"
          },
          "dependencies": [
            "module.compute.aws_security_group.alb_sg",
            "module.networking.aws_subnet.subnet-fgd3",
            "module.networking.aws_subnet.subnet-fgd3-2",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "fgd3_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:listener/app/fgd3-alb/9797da222ad79b0a/1bf17ecba7f126bb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:targetgroup/fgd3-tg/c0b053ac6bc99416",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:listener/app/fgd3-alb/9797da222ad79b0a/1bf17ecba7f126bb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:loadbalancer/app/fgd3-alb/9797da222ad79b0a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:listener/app/fgd3-alb/9797da222ad79b0a/1bf17ecba7f126bb"
          },
          "dependencies": [
            "module.compute.aws_lb.fgd3_alb",
            "module.compute.aws_lb_target_group.fgd3_tg",
            "module.compute.aws_security_group.alb_sg",
            "module.networking.aws_subnet.subnet-fgd3",
            "module.networking.aws_subnet.subnet-fgd3-2",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fgd3_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:targetgroup/fgd3-tg/c0b053ac6bc99416",
            "arn_suffix": "targetgroup/fgd3-tg/c0b053ac6bc99416",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:targetgroup/fgd3-tg/c0b053ac6bc99416",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:loadbalancer/app/fgd3-alb/9797da222ad79b0a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fgd3-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:013873214808:targetgroup/fgd3-tg/c0b053ac6bc99416"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:security-group/sg-0c64eecdd4715dab4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c64eecdd4715dab4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fgd3-alb-sg",
            "name_prefix": "",
            "owner_id": "013873214808",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "sg-0c64eecdd4715dab4",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fgd3-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:security-group/sg-01005c90ba763bb61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01005c90ba763bb61",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c64eecdd4715dab4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fgd3-vpc-sg",
            "name_prefix": "",
            "owner_id": "013873214808",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fgd3-vpc-sg"
            },
            "tags_all": {
              "Name": "fgd3-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "sg-01005c90ba763bb61",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.alb_sg",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:security-group/sg-00dd53b994b6e4e50",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00dd53b994b6e4e50",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fgd3-rds-sg",
            "name_prefix": "",
            "owner_id": "013873214808",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "sg-00dd53b994b6e4e50",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cad72194ca1a4f7",
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:elastic-ip/eipalloc-02cad72194ca1a4f7",
            "association_id": "eipassoc-09629e28312887e41",
            "domain": "vpc",
            "id": "eipalloc-02cad72194ca1a4f7",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-09184ef901879dc02",
            "private_dns": "ip-10-10-1-244.ap-southeast-1.compute.internal",
            "private_ip": "10.10.1.244",
            "public_dns": "ec2-18-141-6-135.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.6.135",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-fgd3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:internet-gateway/igw-0d8f0810c42caa2ac",
            "id": "igw-0d8f0810c42caa2ac",
            "owner_id": "013873214808",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "igw-fgd3"
            },
            "tags_all": {
              "Name": "igw-fgd3"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cad72194ca1a4f7",
            "association_id": "eipassoc-09629e28312887e41",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0328bf365c8785ea4",
            "network_interface_id": "eni-09184ef901879dc02",
            "private_ip": "10.10.1.244",
            "public_ip": "18.141.6.135",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02c397cb47cc20d9b",
            "tags": {
              "Name": "fgd3-nat-gw"
            },
            "tags_all": {
              "Name": "fgd3-nat-gw"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw-fgd3",
            "module.networking.aws_subnet.subnet-fgd3",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "fgd3-main-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:network-acl/acl-0ab36d47e2bb37a10",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ab36d47e2bb37a10",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 110,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 80
              }
            ],
            "owner_id": "013873214808",
            "region": "ap-southeast-1",
            "subnet_ids": [
              "subnet-02c397cb47cc20d9b"
            ],
            "tags": {
              "Name": "fgd3-main-nacl"
            },
            "tags_all": {
              "Name": "fgd3-main-nacl"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.subnet-fgd3",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-fgd3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:route-table/rtb-0ce447478c823e9b4",
            "id": "rtb-0ce447478c823e9b4",
            "owner_id": "013873214808",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8f0810c42caa2ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-fgd3"
            },
            "tags_all": {
              "Name": "rt-fgd3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "rtb-0ce447478c823e9b4",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw-fgd3",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:route-table/rtb-0290badfcbcb78daf",
            "id": "rtb-0290badfcbcb78daf",
            "owner_id": "013873214808",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0328bf365c8785ea4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-fgd3-private"
            },
            "tags_all": {
              "Name": "rt-fgd3-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "rtb-0290badfcbcb78daf",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw-fgd3",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_subnet.subnet-fgd3",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcb6b29e25169ba8",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0290badfcbcb78daf",
            "subnet_id": "subnet-06d13cb28c07f86f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw-fgd3",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.app_subnet_1",
            "module.networking.aws_subnet.subnet-fgd3",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_app_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0121f8824f775a775",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0290badfcbcb78daf",
            "subnet_id": "subnet-0d44a9e9986429436"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.igw-fgd3",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.app_subnet_2",
            "module.networking.aws_subnet.subnet-fgd3",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-rt-fgd3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b63811b375242907",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0ce447478c823e9b4",
            "subnet_id": "subnet-02c397cb47cc20d9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw-fgd3",
            "module.networking.aws_route_table.rt-fgd3",
            "module.networking.aws_subnet.subnet-fgd3",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-rt-fgd3-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ff105f1044c5ca6",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0ce447478c823e9b4",
            "subnet_id": "subnet-09974311a8a707538"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw-fgd3",
            "module.networking.aws_route_table.rt-fgd3",
            "module.networking.aws_subnet.subnet-fgd3-2",
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:subnet/subnet-06d13cb28c07f86f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d13cb28c07f86f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013873214808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "app-subnet-1-private"
            },
            "tags_all": {
              "Name": "app-subnet-1-private"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "subnet-06d13cb28c07f86f0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:subnet/subnet-0d44a9e9986429436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d44a9e9986429436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013873214808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "app-subnet-2-private"
            },
            "tags_all": {
              "Name": "app-subnet-2-private"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "subnet-0d44a9e9986429436",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:subnet/subnet-005020c9e31523e09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005020c9e31523e09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013873214808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "db-subnet-1"
            },
            "tags_all": {
              "Name": "db-subnet-1"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "subnet-005020c9e31523e09",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:subnet/subnet-0efeea2ad8a59cbb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efeea2ad8a59cbb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013873214808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "db-subnet-2"
            },
            "tags_all": {
              "Name": "db-subnet-2"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "subnet-0efeea2ad8a59cbb4",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-fgd3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:subnet/subnet-02c397cb47cc20d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c397cb47cc20d9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013873214808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "subnet-fgd3"
            },
            "tags_all": {
              "Name": "subnet-fgd3"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "subnet-02c397cb47cc20d9b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-fgd3-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:subnet/subnet-09974311a8a707538",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09974311a8a707538",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013873214808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "subnet-fgd3-2-public"
            },
            "tags_all": {
              "Name": "subnet-fgd3-2-public"
            },
            "vpc_id": "vpc-0ba1dcc1fbe30abe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "subnet-09974311a8a707538",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.fgd3-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fgd3-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:013873214808:vpc/vpc-0ba1dcc1fbe30abe3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-095b895fbe91c4bf4",
            "default_route_table_id": "rtb-0624daf90d5f7509c",
            "default_security_group_id": "sg-0c79cf439437fc6f5",
            "dhcp_options_id": "dopt-0abcc8d6582d0066e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba1dcc1fbe30abe3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0624daf90d5f7509c",
            "owner_id": "013873214808",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "013873214808",
            "id": "vpc-0ba1dcc1fbe30abe3",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}